now word likes a charm with about 5 music clips

--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
     <head>
         <title>Testing Musical Scroll</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="muscialscroll.js"></script>
+        <script src="musicalscroll.js"></script>
         <script>
         $(document).ready(function() {
             // Ensure the page always has more scrolling
@@ -12,7 +12,7 @@
                 }
             }).scroll();
 
-            muscialscroll(800);
+            musicalscroll(800);
         });
         </script>
     </head>
