using sound files now instead of imbedding it

--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
                 }
             }).scroll();
 
-            musicalscroll(800);
+            musicalscroll(800, 'sounds');
         });
         </script>
     </head>
